Subzero. Adds x86-64 to the list of supported Subzero targets.
Related changes:
NaCl change: https://codereview.chromium.org/1201483005
LLVM change: https://codereview.chromium.org/1193843016

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4077
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1199043006.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -178,6 +178,7 @@ SB_LDFLAGS := $(LINKOPTLEVEL) $(LD_EXTRA)
 SRCS = \
 	IceAssembler.cpp \
 	IceAssemblerX8632.cpp \
+	IceAssemblerX8664.cpp \
 	IceBrowserCompileServer.cpp \
 	IceCfg.cpp \
 	IceCfgNode.cpp \
@@ -201,6 +202,7 @@ SRCS = \
 	IceTargetLoweringARM32.cpp \
 	IceTargetLoweringMIPS32.cpp \
 	IceTargetLoweringX8632.cpp \
+	IceTargetLoweringX8664.cpp \
 	IceThreading.cpp \
 	IceTimerTree.cpp \
 	IceTranslator.cpp \
