Remove unnecessary TEXTBC_LIBS makefile definition.
Jan correctly pointed out that this makefie definition was redundant
since -lLLVMNaClBitTestUtils was already defined in LLVM_LIBS_LIST.
Removing the definition and simplifying makefile.

BUG=None
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1211593003.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -89,10 +89,8 @@ endif
 ifdef TEXTUAL_BITCODE
   BASE_CXX_DEFINES += -DINPUT_IS_TEXTUAL_BITCODE=1
   OBJDIR := $(OBJDIR)+Tbc
-  TEXTBC_LIBS = -LLVMNaClBitTestUtils
 else
   BASE_CXX_DEFINES += -DINPUT_IS_TEXTUAL_BITCODE=0
-  TEXTBC_LIBS =
 endif
 
 SB_CXX_DEFINES := $(BASE_CXX_DEFINES) -DPNACL_BROWSER_TRANSLATOR=1
@@ -139,7 +137,7 @@ LLVM_LIBS_LIST := -lLLVMIRReader -lLLVMBitReader -lLLVMNaClBitTestUtils \
 
 ifeq ($(AUTOCONF), 0)
   # LLVM cmake build
-  LLVM_LIBS := $(LLVM_LIBS_LIST) $(TEXTBC_LIBS)
+  LLVM_LIBS := $(LLVM_LIBS_LIST)
   # For the cmake build, the gtest libs end up in the same place as the LLVM
   # libs, so no "-L..." arg is needed.
   GTEST_LIB_PATH ?=
