Subzero: Fix cmake build.
Also fixes a set of warnings that only show up for the cmake build.

BUG= none
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1208673003

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_definitions(
   -DALLOW_LLVM_IR_AS_INPUT=1
   -DALLOW_DISABLE_IR_GEN=1
   -DALLOW_MINIMAL_BUILD=0
+  -DINPUT_IS_TEXTUAL_BITCODE=0
   )
 
 if(PNACL_BROWSER_TRANSLATOR)
