Subzero: Enable errors for unused parameters.
Uses pragmas when including problematic LLVM headers, so that clang
doesn't warn about unused parameters -- a rampant problem in the LLVM
code.  This way, we can increase clang's pickiness on Subzero code,
and also not drown in LLVM warnings.

BUG= none
R=jpp@chromium.org, jvoung@chromium.org

Review URL: https://codereview.chromium.org/1217433002

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -162,7 +162,7 @@ SB_TRANSLATE := $(PNACL_BIN_PATH)/pnacl-translate
 
 BASE_CXXFLAGS := -std=gnu++11 -Wall -Wextra -Werror -fno-rtti \
 	-fno-exceptions $(OPTLEVEL) $(ASSERTIONS) -g -pedantic \
-	-Wno-error=unused-parameter $(CXX_EXTRA)
+	$(CXX_EXTRA)
 
 CXXFLAGS := $(LLVM_CXXFLAGS) $(BASE_CXXFLAGS) $(CXX_DEFINES) $(HOST_FLAGS) \
 	$(STDLIB_FLAGS)
