Fixes case where terminator instruction is missing at end of function.
If the bitcode parser detects that the last block in the function
is missing a terminator, generate an error message and insert
a terminator instruction.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4214
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1210013005.

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -48,7 +48,7 @@ config.name = 'subzero'
 config.test_format = lit.formats.ShTest()
 
 # suffixes: A list of file extensions to treat as test files.
-config.suffixes = ['.ll']
+config.suffixes = ['.ll', '.test']
 
 # test_source_root: The root path where tests are located.
 config.test_source_root = os.path.dirname(__file__)
@@ -106,14 +106,16 @@ config.substitutions.append(('%lc2i', ' '.join(iflc2i_atts_cmd + pnacl_sz_cmd
 
 config.substitutions.append(('%pnacl_sz', pnacl_sz_tool))
 
-pnaclbintools = [r"\bFileCheck\b",
-                 r"\ble32-nacl-objdump\b",
-                 r"\bllvm-as\b",
-                 r"\bllvm-mc\b",
-                 r"\bllvm-readobj\b",
-                 r"\bnot\b",
-                 r"\bpnacl-freeze\b",
-                 r"\bpnacl-bcdis\b"]
+pnaclbintools = [r'\b' + x + r'\b' for x in
+                 ['FileCheck',
+                  'le32-nacl-objdump',
+                  'llvm-as',
+                  'llvm-mc',
+                  'llvm-readobj',
+                  'not',
+                  'pnacl-bcdis',
+                  'pnacl-bcfuzz',
+                  'pnacl-freeze']]
 
 for tool in pnaclbintools:
   # The re.sub() line is adapted from one of LLVM's lit.cfg files.
