Adds basic tests to the AssemblerX8632.
More tests will be added during the AssemblerX8664 (on a separate CL.)

BUG=
R=jvoung@chromium.org

Review URL: https://codereview.chromium.org/1231903002.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -218,6 +218,7 @@ SB_OBJS=$(patsubst %.cpp, $(SB_OBJDIR)/%.o, $(SRCS))
 
 UNITTEST_SRCS = \
 	BitcodeMunge.cpp \
+        IceAssemblerX8632Test.cpp \
 	IceELFSectionTest.cpp \
 	IceParseInstsTest.cpp
 
