Fix timer issue in command queues
Change-Id: I937c38e4cf7f022f6c807c4f9ddf2c2e19f90b6f
Reviewed-on: https://swiftshader-review.googlesource.com/3704
Reviewed-by: Maxime Grégoire <mgregoire@google.com>
Tested-by: Maxime Grégoire <mgregoire@google.com>

--- a/src/OpenCL/OpenCL1/OpenCL1.vcxproj
+++ b/src/OpenCL/OpenCL1/OpenCL1.vcxproj
@@ -178,6 +178,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Common\CPUID.hpp" />
+    <ClInclude Include="..\..\Common\Memory.hpp" />
     <ClInclude Include="..\..\Common\Resource.hpp" />
     <ClInclude Include="..\..\Common\Thread.hpp" />
     <ClInclude Include="buffer.h" />
@@ -205,6 +206,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Common\CPUID.cpp" />
+    <ClCompile Include="..\..\Common\Memory.cpp" />
     <ClCompile Include="..\..\Common\Resource.cpp" />
     <ClCompile Include="..\..\Common\Thread.cpp" />
     <ClCompile Include="buffer.cpp" />
