Revert "Replacement of the pthread call by SwiftShader Thread and Resource objects"
This reverts commit 789a9a7391c8234084e0df216615854d1f546600.

Change-Id: Id1f6732616e407f6a3c9bcafb6c1a0b8e110a2ba
Reviewed-on: https://swiftshader-review.googlesource.com/3706
Reviewed-by: Maxime Grégoire <mgregoire@google.com>
Tested-by: Maxime Grégoire <mgregoire@google.com>

--- a/src/OpenCL/OpenCL1/OpenCL1.vcxproj
+++ b/src/OpenCL/OpenCL1/OpenCL1.vcxproj
@@ -95,7 +95,6 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <BrowseInformation>true</BrowseInformation>
-      <AdditionalIncludeDirectories>../../Common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -119,7 +118,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <BrowseInformation>true</BrowseInformation>
-      <AdditionalIncludeDirectories>../../Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\mgregoire\Documents\Visual Studio 2013\Projects\SwiftCL\pthread\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -138,7 +137,6 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;OPENCL1_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../../Common</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -163,7 +161,7 @@
       <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
-      <AdditionalIncludeDirectories>../../Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\mgregoire\Documents\Visual Studio 2013\Projects\SwiftCL\pthread\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -177,10 +175,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Common\CPUID.hpp" />
-    <ClInclude Include="..\..\Common\Memory.hpp" />
-    <ClInclude Include="..\..\Common\Resource.hpp" />
-    <ClInclude Include="..\..\Common\Thread.hpp" />
     <ClInclude Include="buffer.h" />
     <ClInclude Include="builtins.h" />
     <ClInclude Include="cl.h" />
@@ -205,10 +199,6 @@
     <ClInclude Include="worker.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Common\CPUID.cpp" />
-    <ClCompile Include="..\..\Common\Memory.cpp" />
-    <ClCompile Include="..\..\Common\Resource.cpp" />
-    <ClCompile Include="..\..\Common\Thread.cpp" />
     <ClCompile Include="buffer.cpp" />
     <ClCompile Include="builtins.cpp" />
     <ClCompile Include="commandqueue.cpp" />
