--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,26 +3,33 @@ set(LLVM_LINK_COMPONENTS
   Core
   IRReader
   NaClBitReader
+  NaClBitTestUtils
   Support
   )
 
 file(GLOB pnacl_sz_SRCS "src/*.cpp")
 add_llvm_tool(pnacl-sz ${pnacl_sz_SRCS})
 
-add_definitions(
+if(PNACL_BROWSER_TRANSLATOR)
+  add_definitions(
+  -DALLOW_DUMP=0
+  -DALLOW_LLVM_CL=0
+  -DALLOW_LLVM_IR=0
+  -DALLOW_LLVM_IR_AS_INPUT=0
+  -DALLOW_DISABLE_IR_GEN=0
+  -DALLOW_MINIMAL_BUILD=1
+  -DPNACL_BROWSER_TRANSLATOR=1
+  )
+else()
+  add_definitions(
   -DALLOW_DUMP=1
   -DALLOW_LLVM_CL=1
   -DALLOW_LLVM_IR=1
   -DALLOW_LLVM_IR_AS_INPUT=1
   -DALLOW_DISABLE_IR_GEN=1
   -DALLOW_MINIMAL_BUILD=0
-  -DINPUT_IS_TEXTUAL_BITCODE=0
+  -DPNACL_BROWSER_TRANSLATOR=0
   )
-
-if(PNACL_BROWSER_TRANSLATOR)
-  add_definitions(-DPNACL_BROWSER_TRANSLATOR=1)
-else()
-  add_definitions(-DPNACL_BROWSER_TRANSLATOR=0)
 endif()
 
 target_link_libraries(pnacl-sz pthread)
