Iasm and obj lowering for advanced switch lowering.
Jump table emission is delayed until offsets are known. X86 local jumps can be
near or far. Sanboxing is applied to indirect jumps from jump table.

BUG=
R=stichnot@chromium.org, jvoung

Review URL: https://codereview.chromium.org/1257283004.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -102,6 +102,12 @@ ifdef TSAN
   LD_EXTRA += -fsanitize=thread
 endif
 
+ifdef ASAN
+  OBJDIR := $(OBJDIR)+ASan
+  CXX_EXTRA += -fsanitize=address
+  LD_EXTRA += -fsanitize=address
+endif
+
 SB_OBJDIR := $(OBJDIR)+Sandboxed
 
 $(info -----------------------------------------------)
