Subzero. Buildable, non-functional TargetLoweringX8664.
This CL adds a TargetLoweringX8664 that inherits from TargetX86Base, but
other than that it does nothing to generate runnable code.

Things that need to be addressed in follow up CLs:
1) lowerCall
2) lowerArguments
3) lowerRet
4) addPrologue
5) addEpilogue
6) Native 64-bit arithmetic
7) 32- to 64-bit addressing

(7) will be particularly interesting. Pointers in Pexes are always
32-bit wide, so pexes have a de facto 32-bit address space. In
Sandboxed mode that's solved by using RZP (i.e., r15) as a base
register. For native codegen, we still need to decide what to do
-- very likely we will start targeting X32.

NOTE: This CL also

s/IceType_ForceRexW/RexTypeForceRexW/g

because I forgot to do it in the X8664 assembler cl.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4077
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1257643004.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -192,6 +192,7 @@ SRCS = \
 	IceInstARM32.cpp \
 	IceInstMIPS32.cpp \
 	IceInstX8632.cpp \
+	IceInstX8664.cpp \
 	IceIntrinsics.cpp \
 	IceLiveness.cpp \
 	IceOperand.cpp \
