--- a/crosstest/crosstest.cfg
+++ b/crosstest/crosstest.cfg
@@ -5,6 +5,7 @@ test: simple_loop.c
 [mem_intrin]
 driver: mem_intrin_main.cpp
 test: mem_intrin.cpp
+flags: --sz=-fmem-intrin-opt
 
 [test_arith]
 driver: test_arith_main.cpp
