This improves the variable use weight by taking into account use in loops. It further improves spec2k performance and fixes the regression in ammp. Loops are identified using an extension to Tarjan's algorithm.
BUG=
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1318553003.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -195,6 +195,7 @@ SRCS = \
 	IceInstX8664.cpp \
 	IceIntrinsics.cpp \
 	IceLiveness.cpp \
+	IceLoopAnalyzer.cpp \
 	IceOperand.cpp \
 	IceRegAlloc.cpp \
 	IceRNG.cpp \
