--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -96,6 +96,18 @@ else
   OBJDIR := $(OBJDIR)+Asserts
 endif
 
+ifdef UBSAN
+  OBJDIR := $(OBJDIR)+UBSan
+  CXX_EXTRA += -fsanitize=undefined -fno-sanitize=vptr -fno-sanitize=nonnull-attribute
+  LD_EXTRA += -fsanitize=undefined
+endif
+
+ifdef UBSAN_TRAP
+  OBJDIR := $(OBJDIR)+UBSan_Trap
+  CXX_EXTRA += -fsanitize=undefined-trap -fsanitize-undefined-trap-on-error -fno-sanitize=vptr -fno-sanitize=nonnull-attribute
+  LD_EXTRA += -fsanitize=undefined-trap
+endif
+
 ifdef TSAN
   OBJDIR := $(OBJDIR)+TSan
   CXX_EXTRA += -fsanitize=thread
@@ -106,6 +118,12 @@ ifdef ASAN
   OBJDIR := $(OBJDIR)+ASan
   CXX_EXTRA += -fsanitize=address
   LD_EXTRA += -fsanitize=address
+endif
+
+ifdef MSAN
+  OBJDIR := $(OBJDIR)+MSan
+  CXX_EXTRA += -fsanitize=memory
+  LD_EXTRA += -fsanitize=memory
 endif
 
 SB_OBJDIR := $(OBJDIR)+Sandboxed
