Improve use of CfgLocalAllocator and introduce containers that use it.
This doesn't make a big difference but does reduce the proportion of time spent
in malloc and free.

BUG=
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1349833005 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -121,6 +121,7 @@ ifdef ASAN
 endif
 
 ifdef MSAN
+  # TODO(ascull): this has an as yet undiagnosed uninitialized memory access
   OBJDIR := $(OBJDIR)+MSan
   CXX_EXTRA += -fsanitize=memory
   LD_EXTRA += -fsanitize=memory
