--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -373,7 +373,7 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
        # Do all native/sse2 tests, but only test_vector_ops for native/sse4.1.
        # For (slow) sandboxed tests, limit to Om1/sse4.1.
        # TODO(jpp): implement x8664 sandbox, then enable xtests.
-			 # TODO(jpp): reenable the x86-64 tests.
+       # TODO(jpp): reenable the x86-64 tests.
 	./pydir/crosstest_generator.py -v --lit \
 	  --toolchain-root $(TOOLCHAIN_ROOT) \
 	  -i x8632,native,sse2 \
@@ -382,11 +382,10 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
 	  -e x8664,native,sse2 \
 	  -e x8664,native,sse4.1,test_vector_ops \
 	  -e x8664,native,sse2,test_global \
-	  -i arm32,native,neon,simple_loop \
-	  -i arm32,native,neon,mem_intrin \
-	  -i arm32,native,neon,test_bitmanip \
-	  -i arm32,native,neon,test_stacksave \
-	  -i arm32,native,neon,test_strengthreduce
+	  -i arm32,native,neon \
+	  -e arm32,native,neon,test_sync_atomic \
+	  -e arm32,native,neon,test_vector_ops \
+	  -e arm32,native,neon,test_select
 	PNACL_BIN_PATH=$(PNACL_BIN_PATH) \
 	$(LLVM_SRC_PATH)/utils/lit/lit.py -sv crosstest/Output
 endif
