Create local copy of Dart assembler code.
Creates a local version of the Dart assembler code, before being
merged into our code base. The goal of these files is to track code as
it is moved from the Dart implementation into our code base.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4334
R=jpp@chromium.org, stichnot@chromium.org

Review URL: https://codereview.chromium.org/1394613002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -398,6 +398,8 @@ FORMAT_BLACKLIST =
 # Add one of the following lines for each source file to ignore.
 FORMAT_BLACKLIST += ! -name IceParseInstsTest.cpp
 FORMAT_BLACKLIST += ! -name IceParseTypesTest.cpp
+FORMAT_BLACKLIST += ! -name assembler_arm.h
+FORMAT_BLACKLIST += ! -name assembler_arm.cc
 format:
 	$(CLANG_FORMAT_PATH)/clang-format -style=LLVM -i \
 	`find . -regex '.*\.\(c\|h\|cpp\)' $(FORMAT_BLACKLIST)`
